app/static/styles/similarity_pools.css
/****INDEX Page****/
td.post-column article.post {
    width: 204px;
    height: 204px;
}
td.post-column article.post img {
    max-height: 200px;
    max-width: 200px;
}
td.matches-column article.post {
    width: 154px;
    height: 154px;
}
td.matches-column article.post img {
    max-height: 150px;
    max-width: 150px;
}
article.overflow {
    display: inline-block;
    background-color: grey;
    padding: 5px;
    width: 140px;
    height: 140px;
}
article.overflow > span {
    font-size: 20px;
    font-weight: bold;
    color: white;
}
/****SHOW Page****/
div#similarity-pool-heading {
    font-size: 32px;
}
div#similarity-pool-content {
    margin-top: 1em;
}
form#form label {
    border: 1px solid #8DD;
    border-radius: 25px;
    background: #E0F0F0;
    padding: 0.5em;
}
form#form div.checkbox-active label {
    background: linear-gradient(270deg, dodgerblue, transparent);
}
div#similar-posts-container {
    display: flex;
    flex-wrap: wrap;
    margin-top: 1em;
    font-size: 20px;
}
article.similar-post-block {
    width: 320px;
    margin: 0.5em;
    padding: 5px;
    border: 1px solid #EEE;
}
article.similar-post-block div.input label {
    padding: 0.5em;
    margin-top: 0;
}
article.similar-post-block article.post {
    text-align: left;
}
div.similar-post-controls {
    display: flex;
    margin-bottom: 0.5em;
}

